seeds: remove hardcoded paths from generateSeed()

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=triforce-blitz
+
+triforce-blitz.python-interpreter=python
+triforce-blitz.generator-path=/usr/local/share/triforce-blitz/generators
+triforce-blitz.seed-storage-path=/var/triforce-blitz/seeds
+triforce-blitz.rom-file=/usr/local/share/triforce-blitz/ZOOTDEC.z64
