seeds: add randomizer version configuration property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ triforce-blitz.python-interpreter=python
 triforce-blitz.randomizers-path=/usr/local/share/triforce-blitz/randomizers
 triforce-blitz.seed-storage-path=/var/triforce-blitz/seeds
 triforce-blitz.rom-file=/usr/local/share/triforce-blitz/ZOOTDEC.z64
+triforce-blitz.randomizer-version=8.1.37-blitz-0.59
