database: add database changelog

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=triforce-blitz
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 
 triforce-blitz.python-interpreter=python
 triforce-blitz.randomizers-path=/usr/local/share/triforce-blitz/randomizers
