--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ triforce-blitz.randomizers-path=/usr/local/share/triforce-blitz/randomizers
 triforce-blitz.seed-storage-path=/var/triforce-blitz/seeds
 triforce-blitz.rom-file=/usr/local/share/triforce-blitz/ZOOTDEC.z64
 triforce-blitz.randomizer-version=8.2.46-blitz-0.80
-triforce-blitz.randomizer-preset=Triforce Blitz
+triforce-blitz.randomizer-preset=Triforce Blitz S4
