config: disable JPA in views

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=triforce-blitz
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+spring.jpa.open-in-view=false
 
 triforce-blitz.randomizers-path=/usr/local/share/triforce-blitz/randomizers
 triforce-blitz.seed-storage-path=/var/triforce-blitz/seeds
