--- a/.github/workflows/maven-build-image.yml
+++ b/.github/workflows/maven-build-image.yml
@@ -23,17 +23,16 @@ jobs:
       with:
         username: ${{ vars.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Build and push
+      uses: docker/build-push-action@v6
       with:
-        java-version: '21'
-        distribution: 'temurin'
-        server-id: github
-        settings-path: ${{ github.workspace }}
-
-    - name: Build with Maven
-      run: mvn spring-boot:build-image -Dspring-boot.build-image.imageName=${{ vars.DOCKERHUB_USERNAME }}/triforce-blitz
-
-    - name: Publish image to Docker Hub
-      run: docker push ${{ vars.DOCKERHUB_USERNAME }}/triforce-blitz:latest
+        context: .
+        push: true
+        tags: jgbrands/triforce-blitz:latest
