project: add spring boot validation starter

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- I/O -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <!-- Developer tools -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
